base64 removed.